using pug as a template engine

--- a/views/add-product.html
+++ b/views/add-product.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
-  <header>
+  <header class="main-header">
     <nav>
       <ul>
         <li><a href="/">Shop</a></li>
