--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ body{
   margin: 0;
   font-family: sans-serif;
 }
-header{
+.main-header{
   width: 100%;
   height: 3.5rem;
   background-color: rgb(165, 158, 53);
@@ -40,4 +40,44 @@ main{
 }
 h1{
   margin-left: 2rem;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
+}
+.card {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+}
+
+.card__header,
+.card__content {
+  padding: 1rem;
+}
+
+.card__header h1,
+.card__content h1,
+.card__content h2,
+.card__content p {
+  margin: 0;
+}
+
+.card__image {
+  width: 100%;
+}
+
+.card__image img {
+  width: 100%;
+}
+
+.card__actions {
+    padding: 1rem;
+    text-align: center;
+}
+
+.card__actions button,
+.card__actions a {
+    margin: 0 0.25rem;
 }
